[package]
name = "spl-nft-erc-721"
version = "0.1.0"
edition = "2018"

[features]
default = ["test-bpf"]
no-entrypoint = []
test-bpf = []

[dependencies]
num-derive = "0.3"
num-traits = "0.2"
num_enum = "0.5.1"
solana-program = "1.7.6"
thiserror = "1.0"
borsh = "0.9.1"
url = "2.2.1"
spl-token = { version = "3.2.0", features = ["no-entrypoint"] }
spl-associated-token-account = { version = "1.0", features = [ "no-entrypoint" ] }
metaplex-token-metadata = {  version = "0.0.1", features = ["no-entrypoint"] }

[dev-dependencies]
solana-program-test = "1.7.6"
solana-sdk = "1.7.6"
#TODO: solana test  cannot use newer runtime
#tokio = { version = "1.3.0", features=["rt", "time", "macros", "rt-multi-thread"]}
# tokio = { version = "0.3.5"}
[lib]
crate-type = ["cdylib", "lib"]